<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/joinbanner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/str_common_empty"
        android:background="@drawable/join_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:text="@string/str_join_enter_email"
        android:textColor="#ff0000" />

    <EditText
        android:id="@+id/join_mail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:inputType="textEmailAddress"
        android:paddingTop="10dip"
        android:paddingLeft="20dip"
        android:paddingBottom="10dip"
        android:paddingRight="10dip"
        android:hint="@string/str_join_enter_email_hint"
        android:textColor="#000000"
        android:textSize="21sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/str_common_empty"
        android:background="#d3d3d3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/str_join_enter_nickname"
        android:textColor="#ff0000" />

    <EditText
        android:id="@+id/join_nickname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:textColor="#000000"
        android:paddingTop="10dip"
        android:paddingLeft="20dip"
        android:paddingBottom="10dip"
        android:paddingRight="20dip"
        android:hint="@string/str_join_enter_nickname_hint"
        android:textSize="21sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dip"
        android:paddingLeft="20dip"
        android:paddingBottom="20dip"
        android:paddingRight="10dip" >

        <Button
            android:id="@+id/btn_submit_json"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_join_btn_submit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:background="#f5d3d5" />

</LinearLayout>